# tracker

./: .gitignore  CLAUDE.md  README.md  RELEASE.md  TODO.md  create-icon.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
app/: layout.tsx  page.tsx
components/: CategoryManager.tsx  PriorityMatrix.tsx  TaskForm.tsx  TaskList.tsx  WeeklySummary.tsx
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: CategoryManager.tsx  PriorityMatrix.tsx  TaskForm.tsx  TaskList.tsx  WeeklySummary.tsx
src/hooks/: useLocalStorage.ts
src/types/: index.ts
types/: index.ts
